2008-12-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-make-ccl-coding-system): Use define-coding-system if
	it is available.

2008-12-06  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-show-redirection-error-information): New function.
	(w3m-retrieve-and-render): Use it.
	(w3m-w3m-retrieve-1): Return 'redirection-exceeded if redirect counter
	exceeded.
	(w3m-w3m-retrieve): Return "X-w3m-error/redirection" if attr eq
	'redirection-exceeded.
	(w3m-w3m-attributes-1): Return dummy attribute if redirect counter
	exceeded.

2008-12-05  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-same-window-p): New function.
	(w3m-form-input-textarea): Use it.

	* w3m.el (w3m-local-find-file-regexps): Try to open with emacs-w3m as
	many types as possible.

2008-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify): Remove hidden anchors like "<a href=url> </a>".
	cf. [emacs-w3m:10484]

2008-12-01  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-input-textarea): Use the whole current window
	for the textarea when `same-window-buffer-names' contains the buffer
	name "*w3m form textarea*"; simplify the window size calculation.

2008-11-21  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-w3m-parse-header): Also remove parameters when charset is
	specified.

2008-11-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-visited-file-modtime): New function.

	* w3m-bookmark.el (w3m-bookmark-file-modtime): Just return result of
	file-attributes().

2008-11-11  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-antenna.el (w3m-antenna-check-rss): Support RSS2.0. Check also
	items.
	(w3m-antenna-alist): Update site-class if needed.

	* w3m-bookmark.el (w3m-bookmark-buffer, w3m-bookmark-verify-modtime):
	Replace visited-file-modtime with w3m-visited-file-modtime.

2008-10-28  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-view-header): Check if current page is source of
	about:something.

2008-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>
