@@ -1,3 +1,13 @@
+2008-12-10  Naohiro Aota  <nao.aota@gmail.com>
+
+	* w3m.el (w3m-url-encode-string): Encode SPC only when
+	encode-space is non-nil.
+
+	* w3m-form.el (w3m-form-make-form-data): Follow the above change.
+
+	* w3m.el (w3m-gmane-url-at-point): Ditto.
+	(w3m-canonicalize-url): Ditto.
+
 2008-12-08  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-ems.el (w3m-make-ccl-coding-system): Use define-coding-system if
